--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#6096BA</color>
+    <color name="colorPrimaryDark">#49738F</color>
+    <color name="colorSecondary">#A3CEF1</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
