Added all the relevant pages for the application. Setting up the navigation bar for the bottom of the app, still in progress.

--- a/app/src/main/res/layout/activity_add_journal.xml
+++ b/app/src/main/res/layout/activity_add_journal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
-    tools:context=".Add_Journal">
+    tools:context=".AddJournal">
 
     <!--TODO: Make the date section show current date -->
     <!--TODO: Add icons for the mood rating (you can only choose 1) -->
