Added more navigation functionality, enabling movement between fragments that aren't contained in the toolbar.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#49738F</color>
     <color name="colorSecondary">#A3CEF1</color>
     <color name="colorText">#000000</color>
+    <color name="colorTextShadow">#333333</color>
+    <color name="colorBtn">#C44536</color>
 </resources>
