--- a/app/src/main/res/layout/activity_add_journal.xml
+++ b/app/src/main/res/layout/activity_add_journal.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:shadowColor="#333333"
+        android:shadowColor="@color/colorTextShadow"
         android:shadowDx="0"
         android:shadowDy="5"
         android:shadowRadius="10"
