--- a/app/src/main/res/drawable/btn_background.xml
+++ b/app/src/main/res/drawable/btn_background.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="@color/colorBtn" />
     <corners android:radius="15dp" />
+    <size android:height="50dp" android:width="225dp" />
 </shape>
