--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,9 +6,12 @@
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
     tools:context=".Home">
+    <!-- TODO: Add a card to display a mood chart -->
+    <!-- TODO: Add a card to display a horizontal scroll of activity ratings -->
+    <!-- TODO: Add a card to display the most recent journal entry -->
 
     <TextView
-        android:id="@+id/homeTitle"
+        android:id="@+id/home_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -25,17 +28,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnAddNewJourn"
+        android:id="@+id/btn_add_new_journal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/aj_btn"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:padding="15dp"
         android:background="@drawable/btn_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/home_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
