Edited the activity_add_journal.xml's mood buttons to radio buttons. Added more icons for the radio buttons, to change their colours. Made selectors for each radio button to enable this colour change.

--- a/app/src/main/res/layout/activity_add_journal.xml
+++ b/app/src/main/res/layout/activity_add_journal.xml
@@ -61,49 +61,54 @@
             android:textStyle="bold"
             android:text="@string/mood_title"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:padding="10dp">
+            <RadioGroup
+                android:id="@+id/rg_mood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:padding="10dp">
 
-            <Button
-                android:id="@+id/btn_sbeam"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/ic_smile_beam" />
+                <RadioButton
+                    android:id="@+id/rbtn_sbeam"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rb_smile_beam_selector" />
 
-            <Button
-                android:id="@+id/btn_smile"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_smile" />
+                <RadioButton
+                    android:id="@+id/rbtn_smile"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="15dp"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rb_smile_selector" />
 
-            <Button
-                android:id="@+id/btn_neutral"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_neutral" />
+                <RadioButton
+                    android:id="@+id/rbtn_neutral"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="15dp"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rb_neutral_selector" />
 
-            <Button
-                android:id="@+id/btn_sad"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_sad" />
+                <RadioButton
+                    android:id="@+id/rbtn_sad"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="15dp"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rb_sad_selector" />
 
-            <Button
-                android:id="@+id/btn_cry"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_sad_cry" />
-
-
-        </LinearLayout>
+                <RadioButton
+                    android:id="@+id/rbtn_cry"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="15dp"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rb_sad_cry_selector" />
+            </RadioGroup>
 
     </LinearLayout>
 
