--- a/app/src/main/res/layout/activity_goals_page.xml
+++ b/app/src/main/res/layout/activity_goals_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_background"
+    android:background="@drawable/background_app"
     tools:context=".GoalsPage">
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/background_button"
         android:text="@string/add_goal_btn"
         android:textStyle="bold"
         android:textSize="18sp"
