--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_background"
+    android:background="@drawable/background_app"
     tools:context=".Home">
-    <!-- TODO: Add a card to display a mood chart -->
-    <!-- TODO: Add a card to display a horizontal scroll of activity ratings -->
-    <!-- TODO: Add a card to display the most recent journal entry -->
+    <!--
+    TODO: Add a card to display a mood chart
+    TODO: Add a card to display a horizontal scroll of activity ratings
+    TODO: Add a card to display the most recent journal entry
+    -->
 
     <TextView
         android:id="@+id/home_title"
@@ -35,7 +37,7 @@
         android:text="@string/aj_btn"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/background_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_title" />
