Did some general organisation, through refactoring names to include their function.

--- a/app/src/main/res/layout/activity_add_journal.xml
+++ b/app/src/main/res/layout/activity_add_journal.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="@string/mood_title"
+            android:text="@string/aj_mood_title"
             android:textColor="@color/colorText"
             android:shadowColor="@color/colorTextShadow"
             android:shadowDx="0"
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="@string/activities_title"
+            android:text="@string/aj_activities_title"
             android:textColor="@color/colorText"
             android:shadowColor="@color/colorTextShadow"
             android:shadowDx="0"
