--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/aj_btn"
+        android:text="@string/btn_aj"
         android:textStyle="bold"
         android:textSize="18sp"
         android:background="@drawable/background_button"
