--- a/app/src/main/res/layout/activity_add_journal.xml
+++ b/app/src/main/res/layout/activity_add_journal.xml
@@ -144,6 +144,13 @@
             android:shadowRadius="10"
             android:textSize="24sp"
             android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/activitySpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"/>
         
     </LinearLayout>
 
