--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -89,6 +89,46 @@
             android:hint="@string/txt_suggest"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/goalprog_card"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/background_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goaldesc_card">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/ag_goal_prog"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/tv_goal_prog"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:textSize="18sp"
+            android:textColor="@color/colorText"
+            android:text="@string/ag_prog_current"/>
+
+        <SeekBar
+            android:id="@+id/ag_progbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_ag_save"
         android:layout_width="wrap_content"
@@ -100,7 +140,7 @@
         android:text="@string/btn_save"
         android:textStyle="bold"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/goaldesc_card" />
+        app:layout_constraintTop_toBottomOf="@+id/goalprog_card" />
 
     <Button
         android:id="@+id/btn_ag_delete"
