--- a/app/src/main/res/layout/activity_journals_page.xml
+++ b/app/src/main/res/layout/activity_journals_page.xml
@@ -42,7 +42,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jp_title" />
 
+<!-- Start-up Instructions -->
     <LinearLayout
+        android:id="@+id/inst_card"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -52,19 +54,56 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_add_new_journal">
-
         <TextView
-            android:id="@+id/sel_date"
+            android:id="@+id/inst_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="@string/jp_sel_date"
+            android:layout_marginTop="20dp"
+            android:text="@string/inst_title"
             android:textColor="@color/colorText"
             android:textSize="24sp"
             android:textStyle="bold"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="25dp"
+            android:textColor="@color/colorText"
+            android:textSize="18sp"
+            android:text="@string/inst_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorText"
+            android:textSize="18sp"
+            android:text="@string/inst_journal"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorText"
+            android:textSize="18sp"
+            android:text="@string/inst_goal"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/colorText"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:text="@string/inst_end"/>
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
