--- a/app/src/main/res/layout/activity_goals_page.xml
+++ b/app/src/main/res/layout/activity_goals_page.xml
@@ -100,11 +100,11 @@
             android:text="@string/inst_end"/>
     </LinearLayout>
 
-    <!-- RecyclerView to be OFFICIALLY added soon -->
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_goals"
-        android:layout_width="wrap_content"
-        android:layout_height="550dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
