--- a/app/src/main/res/layout/activity_journals_page.xml
+++ b/app/src/main/res/layout/activity_journals_page.xml
@@ -105,5 +105,17 @@
             android:text="@string/inst_end"/>
     </LinearLayout>
 
+    <!-- Recycler View -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_journals"
+        android:layout_width="wrap_content"
+        android:layout_height="550dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_journal"
+        android:visibility="gone"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
