--- a/app/src/main/res/layout/activity_journals_page.xml
+++ b/app/src/main/res/layout/activity_journals_page.xml
@@ -108,7 +108,7 @@
     <!-- Recycler View -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_journals"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="550dp"
         android:layout_marginTop="25dp"
         android:orientation="horizontal"
