--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_add_new_journal"
-        android:visibility="gone">
+        >
         <TextView
             android:id="@+id/inst_title"
             android:layout_width="wrap_content"
@@ -115,7 +115,8 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_journal">
+        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_journal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -129,6 +130,7 @@
             />
 
         <ImageView
+            android:id="@+id/hp_imgmood"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:padding="10dp"
@@ -145,7 +147,8 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hpmood_card">
+        app:layout_constraintTop_toBottomOf="@+id/hpmood_card"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -159,6 +162,7 @@
             />
 
         <TextView
+            android:id="@+id/hp_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -169,6 +173,7 @@
             />
 
         <ImageView
+            android:id="@+id/hp_imgjmood"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:padding="10dp"
@@ -176,6 +181,18 @@
             android:src="@drawable/rb_neutral_selector"/>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/aj_wwwell_title"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/hp_wwwell"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
@@ -186,6 +203,18 @@
             />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/aj_wwwrong_title"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/hp_wwwrong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
